--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarOnRentRenter"
+        android:theme="@style/Base.Theme.CarOnRentRenter"
         tools:targetApi="31">
         <activity
-            android:name=".Favourite"
+            android:name=".Favorite"
             android:exported="false" />
         <activity
             android:name=".Home"
