--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".SignUp"
             android:exported="true" />
+
+        <activity
+            android:name=".Detail"
+            android:exported="true" />
         <activity
             android:name=".Login"
             android:exported="true" >
