--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.CarOnRentRenter"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Date_Book"
+            android:exported="false" />
         <activity
             android:name=".Car_Menu"
             android:exported="false" />
@@ -42,12 +44,9 @@
         <activity
             android:name=".Detail"
             android:exported="true" />
-
         <activity
             android:name=".Profile_Ui"
             android:exported="true" />
-
-
         <activity
             android:name=".Login"
             android:exported="true">
