--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Date_Book"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Car_Menu"
             android:exported="false" />
