--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.CarOnRentRenter"
         tools:targetApi="31">
+        <activity
+            android:name=".Compass"
+            android:exported="true" />
+        <activity
+            android:name=".MainFragment"
+            android:exported="true" />
         <activity
             android:name=".Date_Book"
             android:exported="true" />
